--- a/Web/JavaScript/To Do List-01/style.css
+++ b/Web/JavaScript/To Do List-01/style.css
@@ -64,12 +64,27 @@ ul li{
   transition: 0.5s linear;
 }
 
-ul li span{
+ul li .fas.fa-trash-alt{
   position: absolute;
   top: 0;
   right: 0;
   width: 50px;
+  height: 40px;
+  line-height: 40px;
   text-align: center;
   background: #e00;
   color:#fff;
+}
+
+ul li .fas.fa-check{
+  position: absolute;
+  top: 0;
+  right: 50px;
+  width: 50px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  background: rgb(43, 10, 230);
+  color:#fff;
+  margin-right: 2px;
 }
